--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,285 @@
-.App {
-  text-align: center;
+html {
+    font-family: sans-serif;
+    background-color: rgba(6, 5, 5, 0.919);
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.square-button {
+    color: white;
+    border-radius: 5px;
+    width: 100px;
+    height: 30px;
+    margin: 5px;
+    padding: 5px;
+    text-align: center;
+    display: inline-block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.square-button:hover {
+    background-color: white;
+    color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.login-container {
+    /* background: linear-gradient(to top left, rgb(106, 106, 235), rgb(73, 73, 235), rgb(40, 40, 190)); */
+    height: 100%;
+    color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.login-form {
+
+    text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-form input {
+    border: 0;
+    outline: none;
+    height: 30px;
+    margin: 5px;
+}
+
+.login-button {
+    border: 0;
+    background-color: rgb(51, 95, 160);
+    margin: 5px;
+    width: 100px;
+    padding: 0.5em;
+    color: white;
+}
+
+.Mybutton {
+    color: white;
+    background-color: blue;
+    width: 120px;
+    height: 20px;
+    margin: 5px;
+    padding: 5px;
+    text-align: center;
+    display: inline-block;
+}
+
+.comment-box {
+    position: relative;
+    right: -550px;
+    top: -30px
+}
+
+.comment-button {
+    background-color: rgb(209, 203, 203);
+
+}
+
+.send-button {
+    position: relative;
+    top: 38px;
+    right: 50px;
+}
+
+.comment-body {
+    width: 300px;
+    height: 100px;
+    border: 2px solid;
+    background-color: white;
+
+
+}
+
+#before-comment-click {
+    display: none;
+
+}
+
+.song-list {
+    width: 100%;
+    background-color: rgb(209, 203, 203);
+    height: 150px;
+    margin-bottom: 10px;
+    border: none;
+    position: relative;
+
+}
+
+.song-list>span {
+    padding-right: 20px;
+}
+
+.checked {
+    color: orange;
+}
+
+
+
+.heading {
+    background-color: black;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
+
+.logo {
+    margin-right: 30%;
+    margin-left: 80px;
+
+}
+
+.headers {
+    margin-left: 40px;
+    padding: 7px;
+    border-radius: 5px;
+}
+
+.headers:hover {
+    border: 1px solid white;
+    cursor: grab;
+}
+
+.unlogged-body {
+    background: linear-gradient(to top left, rgb(106, 106, 235), rgb(73, 73, 235), rgb(40, 40, 190));
+    display: flex;
+    height: 700px;
+    justify-content: center;
+    align-items: center;
+}
+
+.sample {
+    color: aquamarine;
+    font-size: 80px;
+
+}
+
+.sample-2 {
+    color: aquamarine;
+    margin-top: 20px;
+}
+
+
+
+.register {
+    margin-top: 20px;
+    background-color: aquamarine;
+    border: none;
+    padding-left: 20px;
+    padding-top: 23px;
+    width: 150px;
+    height: 50px;
+    font-size: 18px;
+    border-radius: 40px;
+    color: rgb(40, 40, 190);
+}
+
+footer {
+    background-color: black;
+    height: 100px;
+    color: white;
+    padding-top: 20px;
+
+}
+
+footer span {
+    margin-left: 50px;
+    margin-right: 80px;
+}
+
+
+
+.dash-header {
+    position: fixed;
+    height: 100%;
+    width: 18%;
+    background-color: black;
+    color: white;
+    padding-top: 70px;
+}
+
+.dash-data {
+    margin-left: 18%;
+    background: linear-gradient(to top left, rgb(106, 106, 235), rgb(73, 73, 235), rgb(40, 40, 190));
+    display: flex;
+    position: absolute;
+    height: 100%;
+    width: 82%;
+    justify-content: center;
+    align-items: center;
+
+
+
+}
+
+.dash-header-1 {
+    margin-bottom: 30px;
+    margin-left: 15px;
+}
+
+.dash-header-1:hover {
+    color: aquamarine;
+    cursor: grab;
+}
+
+.browse-container {
+    margin-left: 20%;
+
+
+}
+
+.browse-data {
+    display: inline-flex;
+    margin-bottom: 20px;
+}
+
+.browse-data-1 {
+    height: 200px;
+    width: 200px;
+    border: none;
+    margin-right: 20px;
+    margin-bottom: 30px;
+    border-radius: 15px;
+    background-color: rgba(44, 39, 39, 0.919);
+    padding-left: 10px;
+    color: rgb(195, 193, 193);
+
+}
+
+.browse-data-1:hover {
+    transform: scale(0.95);
+    opacity: 0.5;
+}
+
+.browse-data-1 div {
+    font-size: 30px;
+
+}
+
+.all-heading {
+    color: rgb(195, 193, 193)
+}
+
+.upload-data {
+    margin-left: 20px;
+    margin-top: 20px;
+
+}
+
+.upload-data input {
+    height: 40px;
+    width: 300px;
+    margin-bottom: 20px;
+    border: none;
+}
+
+.upload-data button {
+    width: 200px;
+    height: 40px;
+    background-color: aqua;
+    border: none;
+}
+
+.browse-search {
+    height: 35px;
+    width: 300px;
+    margin-bottom: 20px;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+
 }
